--- a/demo_project/demo_app/templates/base.html
+++ b/demo_project/demo_app/templates/base.html
@@ -59,6 +59,7 @@
                     <ul class="dropdown-menu">
                          <li><a href="{% url 'demo_app.AdminRoles.views.nuevo_rol' %}">Agregar Rol</a></li>
                         <li><a href="{% url 'demo_app.AdminRoles.views.roles' %}">Listar Roles</a></li>
+                        <li><a href="{% url 'demo_app.AdminRoles.views.nuevo_rol_user' %}">Asignar Roles</a></li>
                     </ul>
                 </li>
 {#                <li><a href="{% url 'demo_app.views.demo_form' %}">Form</a></li>#}
