--- a/demo_project/demo_app/templates/HtmlTipoItem/tipo_item_to_item.html
+++ b/demo_project/demo_app/templates/HtmlTipoItem/tipo_item_to_item.html
@@ -15,6 +15,23 @@
     <td><a class="btn btn-info" href="{% url 'demo_app.AdminItem.views.TipoItem_nuevo_item' tipo_item.id_tipo_item %}">Add Item</a></td>
 </table>
 
+   <table>
+   <td style="width: 70%;margin-right: 0px; margin-left: 100%; ">
+        {{ lines|pagination }}
+   </td>
+   <td>
+       <form id='formulario' method='post' action=''>{% csrf_token %}
+	     <table>
+              <td><input type="text" placeholder="Nombre del Item" name="buscar" width="200px"></td>
+              <td style="width: 20px"></td>
+
+	          <td><input class="btn btn-info btn-lrg" type='submit' value='Buscar'/></td>
+         </table>
+       </form>
+   </td>
+
+   </table>
+
  <table class="table table-bordered table-condensed" >
     <tr>
         <th class="navbar-inner">Nombre</th>
@@ -28,6 +45,7 @@
         <td>{{ dato.descripcion }}</td>
     <td><a href="{% url 'demo_app.AdminItem.views.TipoItem_editar_item' dato.id_item %}">Editar</a>
     - <a href="{% url 'demo_app.AdminRelacion.views.relacion_item' dato.id_item %}">Relacionar</a>
+    - <a href="{% url 'demo_app.AdminRelacion.views.relacion_item' dato.id_item %}">Adjuntar</a>
     </td>
 
 	</tr>
